Fix most offscreen stuff add warning instead
dont have time to fix the layout sadly

--- a/src/styles/Gameplay.css
+++ b/src/styles/Gameplay.css
@@ -49,7 +49,7 @@
 
 .gameplayAudio {
   position: absolute;
-  top: 93%;
+  top: clamp(50%, 88vh, 93%);
   left: 1%;
   display: flex;
   flex-direction: column;
